--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,91 +1,107 @@
-body{
-  margin: 0;
-}
-.slide-container{
-  display: grid;
-  grid-template-columns: 2em auto 4em;
-  grid-gap: 1em;
-  font-size: 200%;
-  height: 100vh
-}
-.unfold{
-  place-self: center;
-  background-color: transparent;
-  border: none;
+:root {
+  --max-width: 1100px;
+  --border-radius: 12px;
+  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
+    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
+    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+
+  --foreground-rgb: 0, 0, 0;
+  --background-start-rgb: 214, 219, 220;
+  --background-end-rgb: 255, 255, 255;
+
+  --primary-glow: conic-gradient(
+    from 180deg at 50% 50%,
+    #16abff33 0deg,
+    #0885ff33 55deg,
+    #54d6ff33 120deg,
+    #0071ff33 160deg,
+    transparent 360deg
+  );
+  --secondary-glow: radial-gradient(
+    rgba(255, 255, 255, 1),
+    rgba(255, 255, 255, 0)
+  );
+
+  --tile-start-rgb: 239, 245, 249;
+  --tile-end-rgb: 228, 232, 233;
+  --tile-border: conic-gradient(
+    #00000080,
+    #00000040,
+    #00000030,
+    #00000020,
+    #00000010,
+    #00000010,
+    #00000080
+  );
+
+  --callout-rgb: 238, 240, 241;
+  --callout-border-rgb: 172, 175, 176;
+  --card-rgb: 180, 185, 188;
+  --card-border-rgb: 131, 134, 135;
 }
 
-.control{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+@media (prefers-color-scheme: dark) {
+  :root {
+    --foreground-rgb: 255, 255, 255;
+    --background-start-rgb: 0, 0, 0;
+    --background-end-rgb: 0, 0, 0;
+
+    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
+    --secondary-glow: linear-gradient(
+      to bottom right,
+      rgba(1, 65, 255, 0),
+      rgba(1, 65, 255, 0),
+      rgba(1, 65, 255, 0.3)
+    );
+
+    --tile-start-rgb: 2, 13, 46;
+    --tile-end-rgb: 2, 5, 19;
+    --tile-border: conic-gradient(
+      #ffffff80,
+      #ffffff40,
+      #ffffff30,
+      #ffffff20,
+      #ffffff10,
+      #ffffff10,
+      #ffffff80
+    );
+
+    --callout-rgb: 20, 20, 20;
+    --callout-border-rgb: 108, 108, 108;
+    --card-rgb: 100, 100, 100;
+    --card-border-rgb: 200, 200, 200;
+  }
 }
-.control button{
-  margin: 2em 0;
-}
-.slide-container button{
-  background-color: transparent;
-  border: none;
-}
-.slide-container svg{
-  stroke: black;
-  fill: none;
-  stroke-width: 4px;
-}
-.slide-container svg:hover{
-  stroke: blue;
-  cursor: pointer;
-}
-.slide{
-  margin-top: 2em;
-  display: grid;
-  grid-template-rows: 2em auto;
-  aspect-ratio: 16/9;
-}
-.title{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-bottom: solid black 1px;
-}
-.body{
-  justify-self: center;
-}
-nav.navigation{
-  position: absolute;
-  height: 100vh;
-  background-color: floralwhite;
-  display: grid;
-  grid-template-columns: auto 4em;
-}
-.navigation button{
-  background-color: transparent;
-  border: none;
-}
-ul.content{
-  place-self: center;
-  list-style-type: none;
-  margin: 0;
+
+* {
+  box-sizing: border-box;
   padding: 0;
+  margin: 0;
 }
-.content li{
-  margin: 1em;
-  font-size: 150%;
-  font-family: sans-serif;
-}
-button.fold{
-  place-self: center;
-}
-.lottery{
-  position: absolute;
-  bottom: 4em;
-}
-.lottery button{
 
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
 }
-.code{
-  font-family: monospace;
+
+body {
+  color: rgb(var(--foreground-rgb));
+  background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
 }
-em{
-  font-family: sans-serif;
-  font-weight: bold;
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
 }
