--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -78,9 +78,11 @@ em{
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: xxx-large;
   padding-bottom: 1em;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
   border-bottom: solid black 1px;
+  font-weight: bold;
 }
 .body{
   justify-self: center;
