--- a/src/styles/ai.module.css
+++ b/src/styles/ai.module.css
@@ -7,3 +7,20 @@ figure.fig img{
 figure.fig figcaption{
   place-self: center;
 }
+table.tb{
+  border-collapse: collapse;
+}
+table.tb tr{
+  border-top: solid black 1px;
+  border-bottom: solid black 1px;
+}
+table.tb td{
+  padding: 0 1em;
+}
+.grid2x2{
+  width: 80%;
+  display: grid;
+  grid-gap: 1em;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
