--- a/src/c/components/style.scss
+++ b/src/c/components/style.scss
@@ -1,9 +1,11 @@
 .indent {
   margin-left: 2em;
 }
+/*
 .code {
   font-family: 'Source Code Pro', monospace;
 }
+*/
 .state {
   font-family: sans-serif;
 }
